--- a/resources/sass/_services.scss
+++ b/resources/sass/_services.scss
@@ -5,8 +5,8 @@
     flex-wrap: wrap;
     margin: 0 auto;
     background: #f6f6f6;
-    padding-left: 5%;
-    padding-right: 5%;
+    padding-left: 20px;
+    padding-right: 20px;
     padding-top: 40px;
 
     &__title {
@@ -75,12 +75,21 @@
             flex-direction: column;
             &:nth-of-type(even) {
                 flex-direction: column;
+                .service_item__image {
+                    padding: 0px;
+                }
+
+            }
+            &:nth-of-type(odd) {
+                flex-direction: column;
+                .service_item__image {
+                    padding: 0px;
+                }
             }
 
             &__image,
             &__info {
                 max-width: 100%;
-                padding: 0px;
             }
         }
     }
