--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-input:-webkit-autofill,
+@import url(//fonts.googleapis.com/css?family=Roboto);input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
@@ -19,6 +19,10 @@ input:-webkit-autofill:active {
 img {
   width: 100%;
   max-width: initial;
+}
+
+* {
+  font-family: "Roboto";
 }
 
 .header {
@@ -147,9 +151,145 @@ img {
   }
 }
 
+.form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  background: #f6f6f6;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.form__title {
+  font-size: 44px;
+  color: #ff4c00;
+  margin-bottom: 40px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.form__items {
+  display: flex;
+  max-width: 1230px;
+  flex-direction: row;
+}
+
+.form__form p {
+  padding-bottom: 10px;
+  font-weight: bold;
+}
+
+.form__desctiption {
+  display: flex;
+  flex-direction: column;
+  padding-left: 50px;
+}
+
+.form__desctiption p,
+.form__desctiption b {
+  padding-bottom: 20px;
+}
+
+.form__desctiption p {
+  color: #575757;
+}
+
+.form__desctiption .phone a {
+  color: #cf3e00;
+  text-decoration: none;
+}
+
+.form__desctiption .phone a:hover {
+  color: #791f00;
+}
+
+.form__desctiption .whatsapp {
+  cursor: pointer;
+  color: #fff;
+  background: #455a64;
+  padding: 19px;
+  margin-bottom: 20px;
+  max-width: 250px;
+  border-radius: 5px;
+  text-decoration: none;
+  position: relative;
+  padding-left: 50px;
+  text-align: center;
+}
+
+.form__desctiption .whatsapp::before {
+  content: "";
+  background-image: url(/images/whatsapp-icone.png?ce6d790509ececd53d9d8de1c19c25fc);
+  width: 26px;
+  height: 26px;
+  display: block;
+  background-size: 100%;
+  top: 15px;
+  left: 25px;
+  position: absolute;
+}
+
+@media (max-width: 768px) {
+  .form__title {
+    font-size: 32px;
+  }
+
+  .form__items {
+    flex-direction: column;
+  }
+
+  .form__desctiption {
+    padding-left: 0px;
+    margin-top: 20px;
+    text-align: center;
+  }
+
+  .form .whatsapp {
+    margin: 0 auto;
+    margin-bottom: 20px;
+  }
+
+  .form .whatsapp::before {
+    left: 20px;
+  }
+}
+
+body {
+  margin-top: 90px;
+}
+
+form input,
+form textarea {
+  padding: 20px;
+  border: 1px solid #dadada;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  width: 100%;
+  font-size: 16px;
+}
+
+form button {
+  border-radius: 5px;
+  width: 100%;
+  padding: 20px;
+  background-color: #ff4c00;
+  color: #fff;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+section {
+  position: relative;
+}
+
 .banner {
   position: relative;
-  margin-top: 90px;
+  margin-top: 80px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -172,9 +312,14 @@ img {
   font-size: 22px;
 }
 
+.banner__img {
+  margin-top: -10%;
+}
+
 .banner .simpleParallax {
   height: auto;
   position: relative;
+  max-height: 850px;
 }
 
 @media (max-width: 768px) {
@@ -189,15 +334,20 @@ img {
   .banner__subtitle {
     font-size: 18px;
   }
+
+  .banner__img {
+    margin-top: 0;
+  }
 }
 
 .services {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   flex-wrap: wrap;
   margin: 0 auto;
-  background: #f6f6f6;
+  background: #fff;
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 40px;
@@ -248,7 +398,9 @@ img {
 
 .services .service_item__info {
   max-width: 50%;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .services .service_item__title {
@@ -261,6 +413,7 @@ img {
   font-size: 16px;
   color: #575757;
   line-height: 22px;
+  max-width: 800px;
 }
 
 @media (max-width: 768px) {
@@ -291,6 +444,362 @@ img {
   .services .service_item__image,
   .services .service_item__info {
     max-width: 100%;
+  }
+}
+
+.products {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  background: #fff;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+}
+
+.products__title {
+  font-size: 44px;
+  color: #ff4c00;
+  margin-bottom: 40px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.products__items {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.products .product_item {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+.products .product_item__image {
+  max-width: 50%;
+  margin-bottom: 20px;
+}
+
+.products .product_item__image img {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.products .product_item:nth-of-type(even) {
+  flex-direction: row-reverse;
+}
+
+.products .product_item:nth-of-type(even) .product_item__image {
+  padding-left: 40px;
+}
+
+.products .product_item:nth-of-type(odd) .product_item__image {
+  padding-right: 40px;
+}
+
+.products .product_item__info {
+  max-width: 50%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.products .product_item__title {
+  margin-bottom: 20px;
+  font-size: 22px;
+  color: #151515;
+}
+
+.products .product_item__description {
+  font-size: 16px;
+  color: #575757;
+  line-height: 22px;
+  max-width: 600px;
+}
+
+@media (max-width: 768px) {
+  .products__title {
+    font-size: 32px;
+  }
+
+  .products .product_item {
+    flex-direction: column;
+  }
+
+  .products .product_item:nth-of-type(even) {
+    flex-direction: column;
+  }
+
+  .products .product_item:nth-of-type(even) .product_item__image {
+    padding: 0px;
+  }
+
+  .products .product_item:nth-of-type(odd) {
+    flex-direction: column;
+  }
+
+  .products .product_item:nth-of-type(odd) .product_item__image {
+    padding: 0px;
+  }
+
+  .products .product_item__image,
+  .products .product_item__info {
+    max-width: 100%;
+  }
+}
+
+.contact {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  background: #f6f6f6;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 40px;
+}
+
+.contact__items {
+  display: flex;
+  width: 100%;
+  max-width: 1230px;
+  flex-direction: row;
+}
+
+.contact__image {
+  width: 100%;
+}
+
+.contact__image img {
+  height: 100%;
+  display: block;
+}
+
+.contact__desctiption {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  background-color: #181818;
+  color: #fff;
+  width: 100%;
+}
+
+.contact__desctiption p {
+  padding-bottom: 20px;
+}
+
+@media (max-width: 768px) {
+  .contact__items {
+    flex-direction: column;
+  }
+}
+
+.abouts {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  background: #fff;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+}
+
+.abouts__title {
+  font-size: 44px;
+  color: #ff4c00;
+  margin-bottom: 40px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.abouts__items {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.abouts .about_item {
+  display: flex;
+  justify-content: start;
+  margin-bottom: 40px;
+  text-align: left;
+}
+
+.abouts .about_item p {
+  padding-bottom: 20px;
+}
+
+.abouts .about_item__image {
+  max-width: 50%;
+  margin-bottom: 20px;
+  padding-right: 40px;
+}
+
+.abouts .about_item__image img {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.abouts .about_item__info {
+  max-width: 50%;
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
+}
+
+.abouts .about_item__description {
+  font-size: 16px;
+  color: #575757;
+  line-height: 22px;
+  max-width: 800px;
+}
+
+@media (max-width: 768px) {
+  .abouts .about_item {
+    flex-direction: column;
+  }
+
+  .abouts .about_item__image,
+  .abouts .about_item__info {
+    max-width: 100%;
+    padding: 0px;
+  }
+
+  .abouts .about_item__image img {
+    max-width: 100%;
+  }
+}
+
+.videos {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  background: #f6f6f6;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.videos__title {
+  font-size: 16px;
+  color: #575757;
+  padding-top: 40px;
+  margin-bottom: 40px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.videos__item {
+  width: 100%;
+  max-width: 1280px;
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+.videos__item iframe {
+  width: 100%;
+  height: 600px;
+}
+
+@media (max-width: 768px) {
+  .videos__item iframe {
+    height: 300px;
+  }
+}
+
+.teams {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  background: #fff;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+}
+
+.teams__title {
+  font-size: 44px;
+  color: #ff4c00;
+  margin-bottom: 40px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.teams__items {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  max-width: 1300px;
+  width: 100%;
+}
+
+.teams .team_item {
+  display: flex;
+  margin-bottom: 40px;
+  text-align: center;
+  flex-direction: column;
+  width: 33.3%;
+}
+
+.teams .team_item__image {
+  width: 200px;
+  margin-bottom: 20px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 0 auto;
+  height: 200px;
+}
+
+.teams .team_item__info {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 20px;
+}
+
+.teams .team_item__title {
+  margin-bottom: 20px;
+  font-size: 22px;
+  color: #151515;
+}
+
+.teams .team_item__description {
+  font-size: 16px;
+  color: #575757;
+  line-height: 22px;
+  max-width: 600px;
+}
+
+@media (max-width: 768px) {
+  .teams__title {
+    font-size: 32px;
+  }
+
+  .teams__items {
+    flex-direction: column;
+  }
+
+  .teams .team_item {
+    flex-direction: column;
+    width: 100%;
   }
 }
 
