--- a/resources/sass/_banner.scss
+++ b/resources/sass/_banner.scss
@@ -1,9 +1,9 @@
 .banner {
     position: relative;
-    margin-top: 90px;
+    margin-top: 80px;
     display: flex;
     align-items: center;
-    justify-content: center;    
+    justify-content: center;
     &__text {
         position: absolute;
         color: #fff;
@@ -18,9 +18,13 @@
         margin-top: 10px;
         font-size: 22px;
     }
+    &__img {
+        margin-top: -10%;
+    }
     .simpleParallax {
         height: auto;
         position: relative;
+        max-height: 850px;
     }
 
     @media (max-width: 768px) {
@@ -34,6 +38,9 @@
 
         &__subtitle {
             font-size: 18px;
+        }
+        &__img {
+            margin-top: 0;
         }
     }
 }
