--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,10 @@
-@import './resets';
-@import './header';
-@import './banner';
-@import './services';
+@import './_resets';
+@import './_fonts';
+@import './_default';
+@import './_banner';
+@import './_services';
+@import './_products';
+@import './_contact';
+@import './_about';
+@import './_team';
 @import './footer';
