--- a/resources/sass/_about.scss
+++ b/resources/sass/_about.scss
@@ -26,7 +26,7 @@
 
     .about_item {
         display: flex;
-        justify-content: start;
+        justify-content: center;
         margin-bottom: 40px;
         text-align: left;
 
