--- a/resources/sass/_fonts.scss
+++ b/resources/sass/_fonts.scss
@@ -1,5 +1,5 @@
-@import url(//fonts.googleapis.com/css?family=Roboto);
+@import url(//fonts.googleapis.com/css?family=Merriweather+Sans);
 
 * {
-    font-family: 'Roboto';
+    font-family: 'Merriweather Sans';
 }
