--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,8 +2,8 @@
 @import './_fonts';
 @import './_default';
 @import './_banner';
+@import './_blocks';
 @import './_services';
-@import './_products';
 @import './_contact';
 @import './_about';
 @import './_team';
