--- a/public/css/app.css
+++ b/public/css/app.css
@@ -300,6 +300,17 @@ h3 {
   font-weight: normal;
 }
 
+.error_404 {
+  min-height: 600px;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background: #f6f6f6;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
 .banner {
   position: relative;
   display: flex;
