--- a/resources/sass/_default.scss
+++ b/resources/sass/_default.scss
@@ -33,3 +33,14 @@ section {
 h2, h3 {
     font-weight: normal;
 }
+
+.error_404 {
+    min-height: 600px;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background: #f6f6f6;
+    font-weight: bold;
+    text-transform: uppercase;
+}
