--- a/resources/sass/site/_form.scss
+++ b/resources/sass/site/_form.scss
@@ -11,6 +11,10 @@
     padding-top: 40px;
     padding-bottom: 40px;
 
+    button {
+        cursor: pointer;
+    }
+
     &__title {
         font-size: 44px;
         color: #ff4c00;
