--- a/resources/sass/site/_contact.scss
+++ b/resources/sass/site/_contact.scss
@@ -37,6 +37,12 @@
         color: #fff;
         width: 100%;
 
+        h1 {
+            font-size: 16px;
+            font-weight: normal;
+            padding-bottom: 10px;
+        }
+
         p {
             padding-bottom: 10px;
         }
