--- a/resources/sass/site/_about.scss
+++ b/resources/sass/site/_about.scss
@@ -5,17 +5,17 @@
     flex-direction: column;
     flex-wrap: wrap;
     margin: 0 auto;
-    background: #fff;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
 
     &__title {
         font-size: 44px;
         color: #ff4c00;
-        margin-bottom: 40px;
         text-align: center;
         font-weight: bold;
+        margin-top: 30px;
+        margin-bottom: 40px;
     }
 
     &__items {
@@ -38,6 +38,7 @@
             max-width: 50%;
             margin-bottom: 20px;
             padding-right: 40px;
+
             img {
                 max-width: 500px;
                 margin: 0 auto;
@@ -60,8 +61,14 @@
     }
 
     @media (max-width: 768px) {
+
+        &__title {
+            font-size: 32px;
+        }
+
         .about_item {
             flex-direction: column;
+
             &__image,
             &__info {
                 max-width: 100%;
@@ -82,15 +89,14 @@
     flex-direction: column;
     flex-wrap: wrap;
     margin: 0 auto;
-    background: #f6f6f6;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
 
     &__title {
         font-size: 16px;
         color: #575757;
-        padding-top: 40px;
-        margin-bottom: 40px;
+        padding-top: 20px;
+        margin-bottom: 20px;
         text-align: center;
         font-weight: bold;
     }
