--- a/resources/sass/site/_blocks.scss
+++ b/resources/sass/site/_blocks.scss
@@ -2,13 +2,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+    padding: 10px;
 
     &__title {
         font-size: 44px;
         color: #ff4c00;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         font-weight: bold;
+        margin-top: 30px;
+        margin-bottom: 40px;
     }
 
     &__items {
