--- a/resources/sass/site/_contact.scss
+++ b/resources/sass/site/_contact.scss
@@ -5,10 +5,10 @@
     flex-direction: column;
     flex-wrap: wrap;
     margin: 0 auto;
-    background: #f6f6f6;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 40px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
+    padding-bottom: 40px;
     text-align: center;
 
     &__items {
@@ -49,6 +49,7 @@
     }
 
     @media (max-width: 768px) {
+
         &__items {
             flex-direction: column;
         }
