--- a/resources/sass/site/_form.scss
+++ b/resources/sass/site/_form.scss
@@ -5,11 +5,14 @@
     flex-direction: column;
     flex-wrap: wrap;
     margin: 0 auto;
-    background: #f6f6f6;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
     padding-top: 40px;
     padding-bottom: 40px;
+
+    &.form-home {
+        padding-top: 0px;
+    }
 
     button {
         cursor: pointer;
