--- a/resources/sass/site/_home_products.scss
+++ b/resources/sass/site/_home_products.scss
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+    padding: 10px;
+    margin-bottom: -30px;
 
     &__items {
         display: flex;
@@ -10,14 +11,16 @@
         justify-content: space-around;
         flex-direction: row;
         width: 100%;
-        max-width: 1300px;
+        max-width: 1230px;
+        margin-top: 20px;
     }
 
     @media (max-width: 768px) {
-        margin-bottom: -40px;
+        margin-bottom: -30px;
 
         &__items {
             flex-direction: column;
+            margin-top: 0px;
         }
     }
 }
@@ -73,7 +76,7 @@
     @media (max-width: 768px) {
         width: 100%;
         height: 200px;
-        margin: 0px 0px 20px 0px;
+        margin: 0px 0px 10px 0px;
 
         &__title {
             font-size: 30px;
