--- a/resources/sass/site/_team.scss
+++ b/resources/sass/site/_team.scss
@@ -5,15 +5,14 @@
     flex-direction: column;
     flex-wrap: wrap;
     margin: 0 auto;
-    background: #fff;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
 
     &__title {
         font-size: 44px;
         color: #ff4c00;
-        margin-bottom: 40px;
+        margin-top: 40px;
+        margin-bottom: 30px;
         text-align: center;
         font-weight: bold;
     }
@@ -22,7 +21,7 @@
         display: flex;
         align-items: center;
         flex-direction: row;
-        max-width: 1300px;
+        max-width: 1230px;
         width: 100%;
     }
 
@@ -67,13 +66,14 @@
         &__title {
             font-size: 32px;
         }
+
         &__items {
             flex-direction: column;
         }
+
         .team_item {
             flex-direction: column;
             width: 100%;
         }
     }
 }
-
