--- a/resources/sass/site/_fonts.scss
+++ b/resources/sass/site/_fonts.scss
@@ -1,5 +1,12 @@
-@import url(//fonts.googleapis.com/css?family=Merriweather+Sans);
+@font-face {
+    font-family: "Merriweather Sans";
+    src: url("../../fonts/merriweathersans-regular-webfont.woff2")
+            format("woff2"),
+        url("../../fonts/merriweathersans-regular-webfont.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+}
 
 * {
-    font-family: 'Merriweather Sans';
+    font-family: "Merriweather Sans";
 }
