--- a/resources/sass/site/_fonts.scss
+++ b/resources/sass/site/_fonts.scss
@@ -5,6 +5,7 @@
         url("../../fonts/merriweathersans-regular-webfont.woff") format("woff");
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 * {
