--- a/resources/sass/site/app.scss
+++ b/resources/sass/site/app.scss
@@ -1,12 +1,12 @@
-@import './_resets';
-@import './_fonts';
-@import './_default';
-@import './_banner';
-@import './_blocks';
-@import './_services';
-@import './_contact';
-@import './_about';
-@import './_team';
-@import './_home_products';
-@import './footer';
-@import './owl.carousel';
+@import "./_resets";
+@import "./_fonts";
+@import "./_default";
+@import "./_banner";
+@import "./_blocks";
+@import "./_services";
+@import "./_contact";
+@import "./_about";
+@import "./_team";
+@import "./_home_products";
+@import "./_carousel";
+@import "./_footer";
