--- a/resources/sass/site/_carousel.scss
+++ b/resources/sass/site/_carousel.scss
@@ -3,6 +3,7 @@
         display: none;
         background: #161616;
         border-bottom: 1px solid #fff;
+        overflow: hidden;
     }
 }
 .product-list {
