--- a/resources/sass/site/_default.scss
+++ b/resources/sass/site/_default.scss
@@ -18,6 +18,7 @@ form textarea {
 }
 
 form button {
+    font-weight: bold;
     border-radius: 5px;
     width: 100%;
     padding: 20px;
@@ -25,6 +26,7 @@ form button {
     color: #fff;
     font-size: 18px;
     text-transform: uppercase;
+    border: 1px solid #000;
 
     &[disabled] {
         opacity: 0.7;
