--- a/resources/sass/site/app.scss
+++ b/resources/sass/site/app.scss
@@ -6,6 +6,7 @@
 @import "./_services";
 @import "./_contact";
 @import "./_about";
+@import "./_products";
 @import "./_team";
 @import "./_home_products";
 @import "./_carousel";
