--- a/resources/sass/site/_carousel.scss
+++ b/resources/sass/site/_carousel.scss
@@ -4,6 +4,7 @@
         background: #161616;
         border-bottom: 1px solid #fff;
         overflow: hidden;
+        margin-top: 95px;
     }
 }
 .product-list {
