--- a/resources/sass/site/_form.scss
+++ b/resources/sass/site/_form.scss
@@ -14,6 +14,10 @@
         padding-top: 0px;
     }
 
+    &.form-product {
+        background: #16161616;
+    }
+
     button {
         cursor: pointer;
     }
