--- a/resources/sass/site/_header.scss
+++ b/resources/sass/site/_header.scss
@@ -47,6 +47,7 @@
     padding: 46px 20px;
     position: relative;
     user-select: none;
+    text-indent: -99999px;
 }
 
 .header .menu-icon .navicon {
