--- a/resources/sass/site/_header.scss
+++ b/resources/sass/site/_header.scss
@@ -1,10 +1,11 @@
 .header {
     background-color: #fff;
-    box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, .1);
+    box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);
     position: fixed;
     width: 100%;
     z-index: 3;
     top: 0px;
+    height: 95px;
 }
 
 .header img {
@@ -38,16 +39,19 @@
 .header .menu {
     clear: both;
     max-height: 0;
-    transition: max-height .2s ease-out;
+    transition: max-height 0.2s ease-out;
 }
 
 .header .menu-icon {
     cursor: pointer;
     float: right;
-    padding: 46px 20px;
+    padding: 0 20px;
     position: relative;
     user-select: none;
     text-indent: -99999px;
+    display: flex;
+    align-items: center;
+    height: 100%;
 }
 
 .header .menu-icon .navicon {
@@ -55,18 +59,18 @@
     display: block;
     height: 2px;
     position: relative;
-    transition: background .2s ease-out;
+    transition: background 0.2s ease-out;
     width: 18px;
 }
 
 .header .menu-icon .navicon:before,
 .header .menu-icon .navicon:after {
     background: #333;
-    content: '';
+    content: "";
     display: block;
     height: 100%;
     position: absolute;
-    transition: all .2s ease-out;
+    transition: all 0.2s ease-out;
     width: 100%;
 }
 
@@ -82,24 +86,24 @@
     display: none;
 }
 
-.header .menu-btn:checked~nav>.menu {
+.header .menu-btn:checked ~ nav > .menu {
     max-height: 4500px;
 }
 
-.header .menu-btn:checked~.menu-icon .navicon {
+.header .menu-btn:checked ~ .menu-icon .navicon {
     background: transparent;
 }
 
-.header .menu-btn:checked~.menu-icon .navicon:before {
+.header .menu-btn:checked ~ .menu-icon .navicon:before {
     transform: rotate(-45deg);
 }
 
-.header .menu-btn:checked~.menu-icon .navicon:after {
+.header .menu-btn:checked ~ .menu-icon .navicon:after {
     transform: rotate(45deg);
 }
 
-.header .menu-btn:checked~.menu-icon:not(.steps) .navicon:before,
-.header .menu-btn:checked~.menu-icon:not(.steps) .navicon:after {
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
     top: 0;
 }
 
