--- a/resources/sass/site/app.scss
+++ b/resources/sass/site/app.scss
@@ -7,6 +7,7 @@
 @import "./_contact";
 @import "./_about";
 @import "./_products";
+@import "./_faq";
 @import "./_team";
 @import "./_home_products";
 @import "./_carousel";
